styles necessary for sponsor page

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -605,6 +605,7 @@ header:after {
     background-image: url(/web/img/intro-bg.jpg);
     background-size: cover;
     background-position: center center;
+    padding: 5em 0 7em;
   }
 }
 
@@ -1368,3 +1369,38 @@ header:after {
   #coc {
     background-color: #fff;
   }
+  .sponsor__info {
+    color: #fff;
+  }
+
+  /*pricing table styles*/
+  .price {
+  font-size: 4em;
+}
+ 
+.price-cents {
+  vertical-align: super;
+  font-size: 50%;
+}
+ 
+.price-month {
+  font-size: 35%;
+  font-style: italic;
+}
+.panel {
+-webkit-transition-property : scale; 
+-webkit-transition-duration : 0.2s; 
+-webkit-transition-timing-function : ease-in-out; 
+-moz-transition : all 0.2s ease-in-out;  
+}
+ 
+.panel:hover {
+box-shadow: 0 0 10px rgba(0,0,0,.5);
+-moz-box-shadow: 0 0 10px rgba(0,0,0,.5);
+-webkit-box-shadow: 0 0 10px rgba(0,0,0,.5);
+-webkit-transform: scale(1.05);
+-moz-transform: scale(1.05);
+}
+.panel-title{
+  padding: 0;
+}
