add github link to footer

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -52,8 +52,15 @@
     <div class="closure">
       <div class="layout--page">
         <div class="social">
-          <a target="_blank" class="social__link twitter" href="#"><i class="fa fa-twitter"></i><span class="visuallyhidden">Twitter</span></a>
-          <a class="social__link email" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span></a>
+          <a target="_blank" class="social__link twitter" href="#">
+            <i class="fa fa-twitter"></i><span class="visuallyhidden">Twitter</span>
+          </a>
+          <a class="social__link email" href="#">
+            <i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span>
+          </a>
+          <a class="social__link github" href="https://github.com/5chackathon/">
+            <i class="fa fa-github"></i><span class="visuallyhidden">Github</span>
+          </a>
         </div>
         <span class="closure__copy">© 2014 5C Hackathon</span>
       </div>
