include logo on t-shirts as part of the silver sponsorship tier

--- a/views/sponsor.erb
+++ b/views/sponsor.erb
@@ -44,6 +44,7 @@
             <ul class="list-group">
               <li class="list-group-item"><strong>Everything in Bronze</strong></li>
               <li class="list-group-item">'A few words from our sponsor' at the hackathon kickoff</li>
+              <li class="list-group-item">Placement of logo on official event T-shirts</li>
             </ul>
           </div>          
         </div>
