--- a/public/styles.css
+++ b/public/styles.css
@@ -942,7 +942,7 @@ header:after {
 }
 
 .speaker__social-button:hover {
-  color: white;
+  color: #3e9df7;
   -webkit-transition: .3s;
   -moz-transition: .3s;
   transition: .3s;
