--- a/views/index.erb
+++ b/views/index.erb
@@ -72,10 +72,10 @@
     <h1 style="color: #fff">The Planning Committee</h1>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/andy.png)">
+        <div class="speaker__img" style="background-image: url(img/team/andy.png)">
         </div>
         <div class="speaker__social">
-          <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
+          <a class="speaker__social-button" href="mailto:andrew.russell@pomona.edu"><i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span></a>
         </div>
       </div>
       <div class="speaker__name" style="color: #fff">
@@ -90,10 +90,10 @@
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/ryan.png)">
+        <div class="speaker__img" style="background-image: url(img/team/ryan.png)">
         </div>
         <div class="speaker__social">
-          <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
+          <a class="speaker__social-button" href="mailto:ryan.luo@pomona.edu"><i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span></a>
         </div>
       </div>
       <div class="speaker__name" style="color:#fff">
@@ -108,10 +108,10 @@
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/aloke.png)">
+        <div class="speaker__img" style="background-image: url(img/team/aloke.png)">
         </div>
         <div class="speaker__social">
-          <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
+          <a class="speaker__social-button" href="mailto:aloke.desai@pomona.edu"><i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span></a>
         </div>
       </div>
       <div class="speaker__name" style="color:#fff">
@@ -126,10 +126,10 @@
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(#)">
+        <div class="speaker__img" style="background-image: url(img/team/maureen.png)">
         </div>
         <div class="speaker__social">
-          <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
+          <a class="speaker__social-button" href="mailto:mnaval@students.pitzer.edu"><i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span></a>
         </div>
       </div>
       <div class="speaker__name" style="color:#fff">
@@ -144,28 +144,28 @@
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(#)">
+        <div class="speaker__img" style="background-image: url(img/team/lucas.png)">
         </div>
         <div class="speaker__social">
-          <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
+          <a class="speaker__social-button" href="mailto:lucas.dossantos@pomona.edu"><i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span></a>
         </div>
       </div>
       <div class="speaker__name" style="color:#fff">
-        Jiexi Cao
+        Lucas Dos Santos
       </div>
       <div class="speaker__title" style="color: #fff">
-        Junior
+        Sophomore
       </div>
       <div class="speaker__company" style="color: #fff">
-        Harvey Mudd College
+        Pomona College
       </div>
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(#)">
+        <div class="speaker__img" style="background-image: url(img/team/mauricio.png)">
         </div>
         <div class="speaker__social">
-          <a class="speaker__social-button" href="#"><i class="fa fa-envelope"></i><span class="visuallyhidden">Twitter</span></a>
+          <a class="speaker__social-button" href="mailto:mauricio.molina@pomona.edu"><i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span></a>
         </div>
       </div>
       <div class="speaker__name" style="color:#fff">
