link twitter and email in footer

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -52,10 +52,10 @@
     <div class="closure">
       <div class="layout--page">
         <div class="social">
-          <a target="_blank" class="social__link twitter" href="#">
+          <a target="_blank" class="social__link twitter" href="http://twitter.com/5chackathon">
             <i class="fa fa-twitter"></i><span class="visuallyhidden">Twitter</span>
           </a>
-          <a class="social__link email" href="#">
+          <a class="social__link email" href="mailto:5chackathon@gmail.com">
             <i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span>
           </a>
           <a class="social__link github" href="https://github.com/5chackathon/">
