--- a/public/styles.css
+++ b/public/styles.css
@@ -1401,3 +1401,8 @@ box-shadow: 0 0 10px rgba(0,0,0,.5);
 .panel-title{
   padding: 0;
 }
+@media (max-width: 975px) and (min-width: 767px) {
+  .panel-title {
+    font-size: 3em;
+  }
+}
