--- a/public/styles.css
+++ b/public/styles.css
@@ -753,7 +753,7 @@ header:after {
   display: none;
   right: 10px;
   top: 10px;
-  font-family: Icon;
+  font-family: FontAwesome;
   -webkit-transition: .4s;
   -moz-transition: .4s;
   transition: .4s;
@@ -764,7 +764,7 @@ header:after {
 }
 
 .marker:after {
-  content: "\e008"
+  content: "\f096"
 }
 
 .open > .marker {
