--- a/views/sponsor.erb
+++ b/views/sponsor.erb
@@ -70,6 +70,7 @@
             </div>
             <div class="panel-body">
               <h3 class="panel-title price">$5000</h3>
+              <div>Limit 1</div>
             </div>
             <ul class="list-group">
               <li class="list-group-item"><strong>Everything in Gold</strong></li>
