--- a/views/sponsor.erb
+++ b/views/sponsor.erb
@@ -1,6 +1,6 @@
 <% @title= "5C Hackathon | Sponsor" %>
 <section>
-  <div class="intro">
+  <div class="intro sponsor-info">
     <div class="layout--page">
       <h1>Become a Sponsor</h1>
       <h2 class="no-margin-top">What?</h2>
