use smaller background image on homepage

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <% @title= "5C Hackathon" %>
 <section>
   <div class="banner">
-    <img class="banner__img" src="img/background.png" alt="5C Hackathon">
+    <img class="banner__img" src="img/background-thin.png" alt="5C Hackathon">
     <span class="banner__main">5C Hackathon</span>
     <span class="banner__date">NOV 13, 2014 &nbsp; &nbsp; Claremont, CA</span>
   </div>
