add missing eventbrite link

--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
     <div class="layout--page">
       <h1>A Hackathon Like No Other</h1>
       <p class="intro__desc">Join other 5C students for a hackathon that is beginner friendly and welcoming of all types of people. The 5C Hackathon is a great experience regardless of your programming ability.  </p>
-      <a class="intro__reg reg"><span class="nowrap">Register Now!</span></a>
+      <a href="https://www.eventbrite.com/e/5chackathon-fall-2014-tickets-13857424931" class="intro__reg reg"><span class="nowrap">Register Now!</span></a>
     </div>
   </div>
 </section>
