update sponsors for f2014 hackathno

--- a/views/index.erb
+++ b/views/index.erb
@@ -59,12 +59,16 @@
   <h3>Gold</h3>
   <div class="logos sponsors">
     <img height="80" src="img/intuit.png" alt="Intuit">
-    <img src="img/cisco.png" alt="Cisco SF">
   </div>
   <h3>Silver</h3>
   <div class="logos sponsors">
-    <img src="img/atlassian.png" height="60" alt="Atlassian">
+    <img src="img/google.png" height="60" alt="Google">
+    
+  </div>
+  <h3>Bronze</h3>
+  <div class="logos sponsors">
     <img src="img/svp.png" height="60" alt="Silicon Valley Program">
+    <img src="img/microsoft.png" height="60" alt="Microsoft">
   </div>
 </section>
 <section class="team" id="team">
