--- a/views/index.erb
+++ b/views/index.erb
@@ -16,7 +16,7 @@
 
 <section class="schedule" id="schedule">
   <table class="layout--page">
-    <caption>Spring 2014 Schedule</caption>
+    <caption>Fall 2014 Schedule</caption>
     <tr>
       <td class="session__time">7:00 PM</td>
       <td>Kickoff</td>
@@ -54,7 +54,7 @@
 
 <section class="companies" id="companies">
 <div class="layout--page">
-  <h1>The Spring 2014 Sponsors</h1>
+  <h1>The Fall 2014 Sponsors</h1>
   <p>Interesting in sponsoring the Fall 2014 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
   <h3>Gold</h3>
   <div class="logos sponsors">
