Change any occurrences to 2014 to Spring 2015

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -43,7 +43,7 @@
         <div class="footer__title">
           5C Hackathon
           <span class="footer__date">
-            November 14, 2014 &nbsp; &nbsp;Pomona College
+            Spring 2015 &nbsp; &nbsp;Pomona College
           </span>
         </div>
       </div>
