--- a/views/index.erb
+++ b/views/index.erb
@@ -55,7 +55,7 @@
 <section class="companies" id="companies">
 <div class="layout--page">
   <h1>The Fall 2014 Sponsors</h1>
-  <p>Interesting in sponsoring the Fall 2014 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
+  <p>Interesting in sponsoring the Spring 2015 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
   <h3>Gold</h3>
   <div class="logos sponsors">
     <img height="80" src="img/intuit.png" alt="Intuit">
