--- a/views/sponsor.erb
+++ b/views/sponsor.erb
@@ -1,22 +1,30 @@
 <% @title= "5C Hackathon | Sponsor" %>
 <section>
-  <div class="intro sponsor-info">
+  <div class="sponsor-info" style="background-color: #f6fbfc">
     <div class="layout--page">
       <h1>Become a Sponsor</h1>
-      <h2 class="no-margin-top">What?</h2>
-      <p class="sponsor__info">The 5C Hackathon is a semiannual hackathon held on Pomona College's campus. Last semester, over 300 of the Claremont Colleges' brightest techincal minds spent 12 hours hacking on projects ranging from 8trhacker, a Chrome extension to bypass limits on 8tracks, to GitBattle, an app to battle Github accounts.</p>
+      <p class="sponsor__info">The <span class="bold-blue">5C Hackathon</span> is a semiannual hackathon held on Pomona College's campus. Last semester, over 300 of the Claremont Colleges' brightest techincal minds spent 12 hours hacking on projects ranging from 8trhacker, a Chrome extension to bypass limits on 8tracks, to GitBattle, an app to battle Github accounts.</p>
       <p class="sponsor__info">An entirely student-run event, the 5C Hackathon has rapidly become a highly anticipated and attended tradition at the Claremont Colleges, drawing talent from five different schools: Pomona, Harvey Mudd, Claremont McKenna, Scripps, and Pitzer.</p>
-      <h2 class="no-margin-top">Why?</h2>
-      <p class="sponsor__info">Sponsoring the 5C Hackathon is a unique opportunity to connect with some of the most talented tech and design undergraduates in the country. Participants comprise some of the most creative, motivated students at the Claremont Colleges, with skills ranging from graphic design, to mobile development, to game development. As a sponsor, you will be able to reach computer science, economics, and other majors who represent the student population that is most passionate about technology. And, unlike more traditional technical institutes, the Claremont Colleges graduate liberal arts students -- young people equipped with a set of skills that uniquely prepares them for any job, whether it's a role as a founder, first employee, or leader in a well-established company.</p>
-      <h2 class="no-margin-top">How?</h2>
-      <p class="sponsor__info">Shoot us an email at <a href="mailto:sponsors@5chackathon.com">sponsors@5chackathon.com</a> , and we'll work out the details. Be sure to check out our sponsorship tiers below</p>
+      <h2 class="no-margin-top dark-blue">What Makes 5C Hackathon Different?</h2>
+      <p class="sponsor__info">
+        We pride ourselves on building a technical community at the Claremont Colleges that is inclusive, creative, and diverse. With that in mind, we focus on making the 5C Hackathon a <span class="bold-blue">beginner-friendly hackathon</span>. Last semester, <span class="bold-blue">56% of our attendees were female, and 51% were first-time hackers</span>. 
+      </p>
+      <p class="sponsor__info">
+        Teaching and mentorship is of the utmost importance to us. Each semester we have week-long classes that teach beginners the basics of how to code so that they can compete in hackathon. In the past, we've taught beginners how to make mobile apps using PhoneGap, web apps using Node.JS, and how to use a database using MongoDB. We also have mentors throughout the night who are always available to help teams.
+      </p>
+      <h2 class="no-margin-top dark-blue">Why Sponsor?</h2>
+      <p class="sponsor__info">
+        Sponsoring is a great way to connect with some of the top computer science students at the Claremont Colleges. By sponsoring, you can get <span class="bold-blue">access to resumes and portfolios</span> of over 300 of students, <span class="bold-blue">showcase your API or product</span> and see students make awesome hacks with them, and get beginners excited about programming by mentoring them.
+      </p>
+      <p class="sponsor__info">
+        Please see the sponsorship tier list detailing the different ways in which you can be part of the 5C Hackathon. Shoot us an email at <a href="mailto:sponsors@5chackathon.com">sponsors@5chackathon.com</a> , and we'll work out the details.</p>
     </div>
   </div>
   </section>
 
   <section class="sponsorship" id="sponsorship">
     <div class="layout--page">
-      <h2>Sponsorship Tiers</h2>
+      <h2 class="dark-blue">Sponsorship Tiers</h2>
         <div class="col-sm-3">
           <div class="panel panel-default text-center">
             <div class="panel-heading">
