--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,10 @@
   <div class="intro">
     <div class="layout--page">
       <h1>A Hackathon Like No Other</h1>
-      <p class="intro__desc">Join other 5C students for a hackathon that is beginner friendly and welcoming of all types of people. The 5C Hackathon is a great experience regardless of your programming ability.  </p>
+      <p class="intro__desc">
+        Whether you're making your first website, or hacking on a Raspberry Pi, the 5C Hackathon is the perfect place to have fun and learn something new. We provide awesome swag, food, and mentorship throughout the entire 12-hour event.
+      </p>
+      <p class="intro__desc">Still interested? Let's do this.</p>
       <a href="#" class="intro__reg reg"><span class="nowrap">Register Now!</span></a>
     </div>
   </div>
