change fall 2014 references to spring 2015 references

--- a/views/index.erb
+++ b/views/index.erb
@@ -19,7 +19,7 @@
 
 <section class="schedule" id="schedule">
   <table class="layout--page">
-    <caption>Fall 2014 Schedule</caption>
+    <caption>Spring 2015 Schedule</caption>
     <tr>
       <td class="session__time">7:00 PM</td>
       <td>Kickoff</td>
