--- a/views/layout.erb
+++ b/views/layout.erb
@@ -43,7 +43,7 @@
         <div class="footer__title">
           5C Hackathon
           <span class="footer__date">
-            Spring 2015 &nbsp; &nbsp;Pomona College
+            April 10, 2015 &nbsp; &nbsp;Pomona College
           </span>
         </div>
       </div>
