--- a/public/styles.css
+++ b/public/styles.css
@@ -547,7 +547,9 @@ header:after {
 .reg:hover {  color: white }
 
 .reg:after {
-  content: "coming soon";
+
+  /*Coming soon text*/
+  /*content: "coming soon";
   position: absolute;
   left: 3em;
   padding: 0 2px;
@@ -560,7 +562,7 @@ header:after {
   color: #00467f;
   font-weight: bold;
   text-transform: uppercase;
-  font-size: .5em;
+  font-size: .5em;*/
 }
 
 .banner {
