move all company logos into separate folder; add Spring 2015 logons

--- a/views/index.erb
+++ b/views/index.erb
@@ -57,22 +57,20 @@
 
 <section class="companies" id="companies">
 <div class="layout--page">
-  <h1>The Fall 2014 Sponsors</h1>
+  <h1>The Spring 2015 Sponsors</h1>
   <p>Interesting in sponsoring the Spring 2015 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
   <h3>Gold</h3>
   <div class="logos sponsors">
-    <img height="80" src="img/intuit.png" alt="Intuit">
-  </div>
-  <h3>Silver</h3>
-  <div class="logos sponsors">
-    <img src="img/google.png" height="60" alt="Google">
-    
+    <img height="80" src="img/sponsors/intuit.png" alt="Intuit">
+    <img height="80" src="img/sponsors/esri.png" alt="Intuit">
+    <img height="80" src="img/sponsors/bloomberg.jpg" alt="Intuit">
   </div>
   <h3>Bronze</h3>
   <div class="logos sponsors">
-    <img src="img/svp.png" height="60" alt="Silicon Valley Program">
-    <img src="img/microsoft.png" height="60" alt="Microsoft">
+    <img src="img/sponsors/google.png" height="60" alt="Google">
+    
   </div>
+
 </section>
 <section class="team" id="team">
   <div class="layout--page">
