updated sponsorship to include meraki and nextdoor

--- a/views/index.erb
+++ b/views/index.erb
@@ -62,13 +62,15 @@
   <h3>Gold</h3>
   <div class="logos sponsors">
     <img height="80" src="img/sponsors/intuit.png" alt="Intuit">
-    <img height="80" src="img/sponsors/esri.png" alt="Intuit">
-    <img height="80" src="img/sponsors/bloomberg.jpg" alt="Intuit">
+    <img height="80" src="img/sponsors/esri.png" alt="Esri">
+    <img height="80" src="img/sponsors/bloomberg.jpg" alt="Bloomberg">
+    <img height="50" src="img/sponsors/nextdoor.png" alt="Nextdoor">
+
   </div>
   <h3>Bronze</h3>
   <div class="logos sponsors">
     <img src="img/sponsors/google.png" height="60" alt="Google">
-    
+    <img src="img/sponsors/meraki.png" height="60" alt="Meraki">
   </div>
 
 </section>
