update dates; remove all register now links

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,7 +3,7 @@
   <div class="banner">
     <img class="banner__img" src="img/background-thin.png" alt="5C Hackathon">
     <span class="banner__main">5C Hackathon</span>
-    <span class="banner__date">APR 10, 2015 &nbsp; &nbsp; Claremont, CA</span>
+    <span class="banner__date">NOV 13, 2015 &nbsp; &nbsp; Claremont, CA</span>
   </div>
   <div class="intro">
     <div class="layout--page">
@@ -12,7 +12,7 @@
         Whether you're making your first website or hacking on a Raspberry Pi, the 5C Hackathon is the perfect place to have fun and learn something new. We provide awesome swag, food, and mentorship throughout the entire 12-hour event.
       </p>
       <p class="intro__desc">Still interested? Let's do this.</p>
-      <a href="/register" class="intro__reg reg"><span class="nowrap">Register Now!</a>
+      <a href="#" class="intro__reg reg"><span class="nowrap">Register Now!</a>
     </div>
   </div>
 </section>
@@ -58,7 +58,7 @@
 <section class="companies" id="companies">
 <div class="layout--page">
   <h1>The Spring 2015 Sponsors</h1>
-  <p>Interesting in sponsoring the Spring 2015 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
+  <p>Interesting in sponsoring the Fall 2015 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
   <h3>Gold</h3>
   <div class="logos sponsors">
     <img height="80" src="img/sponsors/intuit.png" alt="Intuit">
