--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <title><%= @title %></title>
-<meta name="description" content="5C Hackathon April 10, 2015">
+<meta name="description" content="5C Hackathon November 13, 2015">
 <meta name="viewport" content="width=device-width">
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="styles.css">
@@ -28,7 +28,7 @@
           <li class=""><a class="nav--link" href="/#companies" data-text="SPONSORS">Sponsors</a></li>
           <li class=""><a class="nav--link" href="/#team" data-text="TEAM">Team</a></li>
           <li class=""><a class="nav--link" href="/#hack-week" data-text="HACK WEEK">Hack Week</a></li>
-          <li><a href="/register" class="nav--link reg">Register</a></li>
+          <li><a href="#" class="nav--link reg">Register</a></li>
         </ul>
       </nav>
     </div>
@@ -43,7 +43,7 @@
         <div class="footer__title">
           5C Hackathon
           <span class="footer__date">
-            April 10, 2015 &nbsp; &nbsp;Pomona College
+            November 13, 2015 &nbsp; &nbsp;Pomona College
           </span>
         </div>
       </div>
@@ -62,7 +62,7 @@
             <i class="fa fa-github"></i><span class="visuallyhidden">Github</span>
           </a>
         </div>
-        <span class="closure__copy">© 2014 5C Hackathon</span>
+        <span class="closure__copy">© 2015 5C Hackathon</span>
       </div>
     </div>
   </footer>
