Update sponsors for Fall 2015

--- a/views/index.erb
+++ b/views/index.erb
@@ -57,21 +57,32 @@
 
 <section class="companies" id="companies">
 <div class="layout--page">
-  <h1>The Spring 2015 Sponsors</h1>
+  <h1>The Fall 2015 Sponsors</h1>
   <p>Interesting in sponsoring the Fall 2015 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
   <h3>Gold</h3>
   <div class="logos sponsors">
     <img height="80" src="img/sponsors/intuit.png" alt="Intuit">
-    <img height="80" src="img/sponsors/esri.png" alt="Esri">
-    <img height="80" src="img/sponsors/bloomberg.jpg" alt="Bloomberg">
-    <img height="50" src="img/sponsors/nextdoor.png" alt="Nextdoor">
-
+    <img src="img/sponsors/meraki.png" height="80" alt="Meraki">
+    <img src="img/sponsors/airbnb.png" height="80" alt="Airbnb">
   </div>
+  
+  <h3>Silver</h3>
+  <div class="logos sponsors">
+    <img height="80" src="img/sponsors/lyft.png" alt="Lyft">
+    <img src="img/sponsors/google.png" height="60" alt="Google">
+  </div>
+
   <h3>Bronze</h3>
   <div class="logos sponsors">
-    <img src="img/sponsors/google.png" height="60" alt="Google">
-    <img src="img/sponsors/meraki.png" height="60" alt="Meraki">
+    <img src="img/sponsors/svp.jpg" height="60" alt="Silicon Valley Program">
   </div>
+
+  <h3>Supporters</h3>
+  <div class="logos sponsors">
+    <img src="img/sponsors/microsoft.png" height="30" alt="Silicon Valley Program">
+    <img src="img/sponsors/wolfram.jpg" height="60" alt="Wolfram Alpha">
+  </div>
+
 
 </section>
 <section class="team" id="team">
