--- a/views/index.erb
+++ b/views/index.erb
@@ -90,35 +90,16 @@
     <h1 style="color: #fff">The Planning Committee</h1>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/andy.png)">
-        </div>
-        <div class="speaker__social">
-          <a class="speaker__social-button" href="mailto:andrew.russell@pomona.edu"><i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span></a>
-        </div>
-      </div>
-      <div class="speaker__name" style="color: #fff">
-        Andy Russell
-      </div>
-      <div class="speaker__title" style="color: #fff">
-        Senior
-      </div>
-      <div class="speaker__company" style="color: #fff">
-        Pomona College
-      </div>
-    </div>
-    <div class="speaker">
-      <div class="speaker__wrap">
         <div class="speaker__img" style="background-image: url(img/team/ryan.png)">
         </div>
         <div class="speaker__social">
-          <a class="speaker__social-button" href="mailto:ryan.luo@pomona.edu"><i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span></a>
         </div>
       </div>
-      <div class="speaker__name" style="color:#fff">
+      <div class="speaker__name" style="color: #fff">
         Ryan Luo
       </div>
       <div class="speaker__title" style="color: #fff">
-        Junior
+        Senior
       </div>
       <div class="speaker__company" style="color: #fff">
         Pomona College
@@ -128,12 +109,39 @@
       <div class="speaker__wrap">
         <div class="speaker__img" style="background-image: url(img/team/aloke.png)">
         </div>
-        <div class="speaker__social">
-          <a class="speaker__social-button" href="mailto:aloke.desai@pomona.edu"><i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span></a>
-        </div>
       </div>
       <div class="speaker__name" style="color:#fff">
         Aloke Desai
+      </div>
+      <div class="speaker__title" style="color: #fff">
+        Senior
+      </div>
+      <div class="speaker__company" style="color: #fff">
+        Pomona College
+      </div>
+    </div>
+    <div class="speaker">
+      <div class="speaker__wrap">
+        <div class="speaker__img" style="background-image: url(img/team/maureen.png)">
+        </div>
+      </div>
+      <div class="speaker__name" style="color:#fff">
+        Maureen Naval
+      </div>
+      <div class="speaker__title" style="color: #fff">
+        Junior
+      </div>
+      <div class="speaker__company" style="color: #fff">
+        Pitzer College
+      </div>
+    </div>
+    <div class="speaker">
+      <div class="speaker__wrap">
+        <div class="speaker__img" style="background-image: url(img/team/lucas.png)">
+        </div>
+      </div>
+      <div class="speaker__name" style="color:#fff">
+        Lucas Dos Santos
       </div>
       <div class="speaker__title" style="color: #fff">
         Junior
@@ -144,53 +152,14 @@
     </div>
     <div class="speaker">
       <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/maureen.png)">
-        </div>
-        <div class="speaker__social">
-          <a class="speaker__social-button" href="mailto:mnaval@students.pitzer.edu"><i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span></a>
+        <div class="speaker__img" style="background-image: url(img/team/zach.jpg)">
         </div>
       </div>
       <div class="speaker__name" style="color:#fff">
-        Maureen Naval
+        Zach Hauser
       </div>
       <div class="speaker__title" style="color: #fff">
-        Sophomore
-      </div>
-      <div class="speaker__company" style="color: #fff">
-        Pitzer College
-      </div>
-    </div>
-    <div class="speaker">
-      <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/lucas.png)">
-        </div>
-        <div class="speaker__social">
-          <a class="speaker__social-button" href="mailto:lucas.dossantos@pomona.edu"><i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span></a>
-        </div>
-      </div>
-      <div class="speaker__name" style="color:#fff">
-        Lucas Dos Santos
-      </div>
-      <div class="speaker__title" style="color: #fff">
-        Sophomore
-      </div>
-      <div class="speaker__company" style="color: #fff">
-        Pomona College
-      </div>
-    </div>
-    <div class="speaker">
-      <div class="speaker__wrap">
-        <div class="speaker__img" style="background-image: url(img/team/mauricio.png)">
-        </div>
-        <div class="speaker__social">
-          <a class="speaker__social-button" href="mailto:mauricio.molina@pomona.edu"><i class="fa fa-envelope"></i><span class="visuallyhidden">Email</span></a>
-        </div>
-      </div>
-      <div class="speaker__name" style="color:#fff">
-        Mauricio Molina
-      </div>
-      <div class="speaker__title" style="color: #fff">
-        Senior
+        Junior
       </div>
       <div class="speaker__company" style="color: #fff">
         Pomona College
