--- a/views/index.erb
+++ b/views/index.erb
@@ -61,26 +61,46 @@
   <p>Interesting in sponsoring the Fall 2015 Hackathon? Click <a href="/sponsor">here</a> for more information.</p>
   <h3>Gold</h3>
   <div class="logos sponsors">
-    <img height="80" src="img/sponsors/intuit.png" alt="Intuit">
-    <img src="img/sponsors/meraki.png" height="80" alt="Meraki">
-    <img src="img/sponsors/airbnb.png" height="80" alt="Airbnb">
+    <a href="http://www.intuit.com/">
+      <img height="80" src="img/sponsors/intuit.png" alt="Intuit">
+    </a>
+
+    <a href="http://www.meraki.com">
+      <img src="img/sponsors/meraki.png" height="80" alt="Meraki">
+    </a>
+    
+    <a href="http://www.airbnb.com">
+      <img src="img/sponsors/airbnb.png" height="80" alt="Airbnb">
+    </a>
   </div>
   
   <h3>Silver</h3>
   <div class="logos sponsors">
-    <img height="80" src="img/sponsors/lyft.png" alt="Lyft">
-    <img src="img/sponsors/google.png" height="60" alt="Google">
+    <a href="http://www.lyft.com">
+      <img height="80" src="img/sponsors/lyft.png" alt="Lyft">
+    </a>
+    
+    <a href="http://www.google.com">
+      <img src="img/sponsors/google.png" height="60" alt="Google">
+    </a>
   </div>
 
   <h3>Bronze</h3>
   <div class="logos sponsors">
-    <img src="img/sponsors/svp.jpg" height="60" alt="Silicon Valley Program">
+    <a href="http://www.cmc.edu/silicon-valley-program">
+      <img src="img/sponsors/svp.jpg" height="60" alt="Silicon Valley Program">
+    </a>
   </div>
 
   <h3>Supporters</h3>
   <div class="logos sponsors">
-    <img src="img/sponsors/microsoft.png" height="30" alt="Silicon Valley Program">
-    <img src="img/sponsors/wolfram.jpg" height="60" alt="Wolfram Alpha">
+    <a href="http://www.microsoft.com">
+      <img src="img/sponsors/microsoft.png" height="30" alt="Silicon Valley Program">
+    </a>
+    
+    <a href="http://www.wolfram.com/index.php">
+      <img src="img/sponsors/wolfram.png" height="70" alt="Wolfram Alpha">
+    </a>
   </div>
 
 
